journal/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-service
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: api.estudo.kubernetes # Mude para o seu endereço
      http:
        paths:
          - path: /grafana
            backend:
              serviceName: prometheus-operator-1594267001-grafana
              servicePort: 80
